Fix formatting of "jump to post" in search results

--- a/we_universal/theme/content.css
+++ b/we_universal/theme/content.css
@@ -372,6 +372,11 @@ dl.faq dt {
 	width: 100%;
 }
 
+
+.search .inner {
+	display: inline-block;
+}
+
 .online {
 	background-image: none;
 }
